<resources>
    <string name="app_name">喝水提醒</string>

    <string name="today">今日</string>
    <string name="plan">计划</string>
    <string name="statistics">统计</string>
    <string name="others">其他</string>
    
    <string name="remainder_tip">今日还需要喝水</string>
    <string name="drink_100">100ml</string>
    <string name="drink_150">150ml</string>
    <string name="drink_200">200ml</string>
    <string name="drink_water">自定义</string>

    <string name="label_plan_total">摄水量</string>
    <string name="label_plan_total_description">每日喝水目标为</string>
    <string name="label_unit">mL</string>
    <string name="label_plan_time">提醒时间</string>
</resources>
