<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/nav_bar_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        layout="@layout/fragment_plan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/nav_bar_height"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="visible" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_today"
        style="@style/NavBar"
        android:gravity="center"
        android:text="@string/today"
        app:layout_constraintEnd_toStartOf="@+id/label_plan"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_plan"
        style="@style/NavBar"
        android:gravity="center"
        android:text="@string/plan"
        app:layout_constraintEnd_toStartOf="@+id/label_statistics"
        app:layout_constraintStart_toEndOf="@+id/label_today" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_statistics"
        style="@style/NavBar"
        android:gravity="center"
        android:text="@string/statistics"
        app:layout_constraintEnd_toStartOf="@+id/label_others"
        app:layout_constraintStart_toEndOf="@+id/label_plan" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/label_others"
        style="@style/NavBar"
        android:gravity="center"
        android:text="@string/others"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_statistics" />

</android.support.constraint.ConstraintLayout>